--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.6.20"
+hyper = "0.14.27"
+tokio = { version = "1.32.0", features = ["full"] }
+serde = { version = "1.0.130", features = ["derive"] }
+tracing = "0.1.27"
+serde_json = "1.0.68"
+tracing-subscriber = { version = "0.2.19", features = ["env-filter"] }
